--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "typescript": "^3.9.3"
+    "typescript": "^3.9.3",
+    "react-app-rewired": "^2.1.6"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
@@ -30,7 +31,6 @@
     "eslint-plugin-react-hooks": "2.3.0",
     "node-sass": "^4.14.1",
     "prettier": "^2.0.5",
-    "react-app-rewired": "^2.1.6"
   },
   "scripts": {
     "start": "react-app-rewired start",
