--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "eslint-plugin-react": "7.18.0",
     "eslint-plugin-react-hooks": "2.3.0",
     "node-sass": "^4.14.1",
-    "prettier": "^2.0.5",
+    "prettier": "^2.0.5"
   },
   "scripts": {
     "start": "react-app-rewired start",
