--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "typescript": "^3.9.3",
-    "react-app-rewired": "^2.1.6"
+    "react-app-rewired": "^2.1.6",
+    "customize-cra": "^0.9.1"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-preset-mobx": "^2.0.0",
-    "customize-cra": "^0.9.1",
     "eslint": "6.8.0",
     "eslint-config-prettier": "6.9.0",
     "eslint-loader": "3.0.3",
