--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "crypto-story",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3000",
-  "dependencies": {
+    "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -33,7 +32,7 @@
     "prettier": "^2.0.5"
   },
   "scripts": {
-    "start": "react-app-rewired start",
+    "start": "react-scripts start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject"
