--- a/package.json
+++ b/package.json
@@ -32,11 +32,12 @@
     "prettier": "^2.0.5"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
-    "eject": "react-scripts eject"
-  },
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm run build"
+},
   "eslintConfig": {
     "extends": "react-app"
   },
