--- a/package.json
+++ b/package.json
@@ -32,12 +32,11 @@
     "prettier": "^2.0.5"
   },
   "scripts": {
-    "start": "serve -s build",
+    "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
-    "eject": "react-scripts eject",
-    "heroku-postbuild": "npm run build"
-},
+    "eject": "react-scripts eject"
+  },
   "eslintConfig": {
     "extends": "react-app"
   },
